modification to frontend integration of media service
